更新导航菜单，添加“Talks”链接，同时删除了多篇过时的演讲和教程文档，更新了个人简历的LaTeX模板中的职位信息，提升了简历的专业性和完整性。

--- a/cv_folder/cv.tex
+++ b/cv_folder/cv.tex
@@ -96,7 +96,7 @@
 \begin{center}
     \textbf{\Huge \scshape Hao Zeng}
     \vspace{0.5em}\\
-    {\small Southern University of Science and Technology}
+    {\small Postdoc, Department of Statistics and Data Science, Southern University of Science and Technology}
     % \small "Heterogeneity nourishes statistics; independence begets probability; uncertainty is eternal."
 \end{center}
 
